--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Lilita+One&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
         <title>All about Dogs</title>
         <meta charset="utf-8">
@@ -20,13 +23,11 @@
     <body>
         <h2>Dogs are Dynamite!</h2>
         <p>
-            Dogs are awesome becaus they are so loyal. Dogs can learn a lot of tricks as well. you can even win awards to become the best dog trainer. If you want a best friend for life, get yourself a dog.
+            Dogs are awesome because they are so loyal. Dogs can learn a lot of tricks as well. you can even win awards to become the best dog trainer. If you want a best friend for life, get yourself a dog.
         </p>
         <img src="images/dogImg1.jpg">
         <br>
         Photo by <a href="https://unsplash.com/@o5ky?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Oscar Sutton</a> on <a href="https://unsplash.com/photos/dog-running-on-beach-during-daytime-yihlaRCCvd4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-        Photo by <a href="https://unsplash.com/@charlesdeluvio?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">charlesdeluvio</a> on <a href="https://unsplash.com/photos/black-pug-with-gray-knit-scarf-Mv9hjnEUHR4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-        Photo by <a href="https://unsplash.com/@alvannee?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Alvan Nee</a> on <a href="https://unsplash.com/photos/short-coated-brown-and-white-puppy-sitting-on-floor-brFsZ7qszSY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         <h2>Adorable Video about Dogs</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/IZzeLnaygME?si=DxuzsFI8lxZbvaGJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <footer><a href="why.html">Why I like Dogs</a></footer>
