--- a/why.html
+++ b/why.html
@@ -3,12 +3,23 @@
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Lilita+One&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
         <title>All about Dogs</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
-        
+    <header>
+        <img class="smallerImg" src="images/dogImg3.jpg">
+        <h1>Dog Gone Awesome</h1>
+        <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Pluto_(Disney)" target="_blank">Pluto</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Scooby-Doo_(character)" target="_blank">Scooby Doo</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Snoopy" target="_blank">Snoopy</a></li>
+        </ul>
+    </header>
     <body>
         <h2>Why I prefer dogs over cats</h2>
         <p>
