--- a/index.html
+++ b/index.html
@@ -32,4 +32,4 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/IZzeLnaygME?si=DxuzsFI8lxZbvaGJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <footer><a href="why.html">Why I like Dogs</a></footer>
     </body>
-</html>
+</html
